# Photon

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  parametereditor.cpp  parametereditor.h  photon-global.h  photoncore.cpp  photoncore.h  processcontext.h  resources.qrc  surfaceqml.qrc  timekeeper.cpp  timekeeper.h
core-test/: CMakeLists.txt  photon-test.cpp
core-test/bus/: bustest.cpp  bustest.h
core-test/fixture/: fixturecapabilitytest.cpp  fixturecapabilitytest.h  fixturecollectiontest.cpp  fixturecollectiontest.h
core-test/sequence/: sequencetest.cpp  sequencetest.h
core/audio/: audioprocessor.cpp  audioprocessor.h
core/canvas/: canvaseffect.cpp  canvaseffect.h
core/channel/: gizmoretimechanneleffect.cpp  gizmoretimechanneleffect.h  palettegizmochanneleffect.cpp  palettegizmochanneleffect.h  splinechanneleffect.cpp  splinechanneleffect.h  togglegizmochanneleffect.cpp  togglegizmochanneleffect.h
core/data/: commonmodel.cpp  commonmodel.h  dmxmatrix.cpp  dmxmatrix.h  dmxtimemachine.cpp  dmxtimemachine.h  spline.cpp  spline.h  types.h
core/falloff/: constantfalloffeffect.cpp  constantfalloffeffect.h  falloffeffect.cpp  falloffeffect.h  falloffeffect_p.h  falloffmap2d.cpp  falloffmap2d.h  fixturefalloffmap.cpp  fixturefalloffmap.h
core/fixture/: dmxreceiver.h  fixture.cpp  fixture.h  fixturechannel.cpp  fixturechannel.h  fixturechannel_p.h  fixturecollection.cpp  fixturecollection.h  fixtureeditorwidget.cpp  fixtureeditorwidget.h  fixturegroup.cpp  fixturegroup.h  fixturemask.cpp  fixturemask.h  fixturequery.cpp  fixturequery.h  fixturevirtualchannel.cpp  fixturevirtualchannel.h  fixturewheel.cpp  fixturewheel.h  maskeffect.cpp  maskeffect.h  maskeffect_p.h
core/gui/: fixturefalloff2deditor.cpp  fixturefalloff2deditor.h  fixturefalloff2deditor_p.h  guimanager.cpp  guimanager.h  guimanager_p.h  menufactory.h  panel.cpp  panel.h  panel_p.h  pixellayouteditor.cpp  pixellayouteditor.h  pixellayouteditor_p.h  pointedit.cpp  pointedit.h  sceneobjectselector.cpp  sceneobjectselector.h  sceneobjectselector_p.h  tageditwidget.cpp  tageditwidget.h  tageditwidget_p.h  tagpicker.cpp  tagpicker.h  vector3edit.cpp  vector3edit.h  waveformwidget.cpp  waveformwidget.h  window.cpp  window.h
core/opengl/: distancetransform.cpp  distancetransform.h  offscreenrenderer.cpp  offscreenrenderer.h  openglframebuffer.cpp  openglframebuffer.h  opengllayer.cpp  opengllayer.h  opengllayerpainter.cpp  opengllayerpainter.h  opengllayerwrapper.cpp  opengllayerwrapper.h  openglplane.cpp  openglplane.h  openglrenderlayer.cpp  openglrenderlayer.h  openglresources.cpp  openglresources.h  openglshader.cpp  openglshader.h  openglsubdividedlayerpainter.cpp  openglsubdividedlayerpainter.h  opengltexture.cpp  opengltexture.h  opengltexturedplane.cpp  opengltexturedplane.h  openglviewport.cpp  openglviewport.h  openglviewportlayer.cpp  openglviewportlayer.h
core/pixel/: canvas.cpp  canvas.h  canvascollection.cpp  canvascollection.h  fixturepixellayout.cpp  fixturepixellayout.h  fixturepixelsource.cpp  fixturepixelsource.h  pixellayout.cpp  pixellayout.h  pixellayoutcollection.cpp  pixellayoutcollection.h  pixelsource.cpp  pixelsource.h  pixelsourcelayout.cpp  pixelsourcelayout.h  pixelstrip.cpp  pixelstrip.h
core/plugin/: iplugin.h  pluginfactory.cpp  pluginfactory.h
core/project/: project.cpp  project.h
core/resources/: moving-head-test.fbx  styles.css  test.dae  test.fbx  test.mtl
core/routine/: routine.cpp  routine.h  routinecollection.cpp  routinecollection.h  routineevaluationcontext.h
core/scene/: scenearrow.cpp  scenearrow.h  scenefactory.cpp  scenefactory.h  scenegroup.cpp  scenegroup.h  sceneiterator.h  scenemanager.cpp  scenemanager.h  scenemodel.cpp  scenemodel.h  sceneobject.cpp  sceneobject.h  sceneobject_p.h  scenesurface.cpp  scenesurface.h  scenezone.cpp  scenezone.h  truss.cpp  truss.h
core/sequence/: baseeffect.cpp  baseeffect.h  baseeffectparent.h  beatlayer.cpp  beatlayer.h  canvasclip.cpp  canvasclip.h  canvasclipeffect.cpp  canvasclipeffect.h  canvaseffect.cpp  canvaseffect.h  canvaslayergroup.cpp  canvaslayergroup.h  canvasroutineclipeffect.cpp  canvasroutineclipeffect.h  channel.cpp  channel.h  channel_p.h  channeleffect.cpp  channeleffect.h  channeleffect_p.h  clip.cpp  clip.h  clip_p.h  clipeffect.cpp  clipeffect.h  (+35 more)
keira/: CMakeLists.txt  keira-global.h
keira-playground/: CMakeLists.txt  main.cpp  playgroundwidget.cpp  playgroundwidget.h
keira-test/: CMakeLists.txt  evalbenchmark.cpp  evaluationtest.cpp  evaluationtest.h  keira-test.cpp
photon-desktop/: CMakeLists.txt  desktop.cpp
plugin-clip-effects/: .gitignore  CMakeLists.txt  clip-effect-resources.qrc  pluginclipeffects.cpp  pluginclipeffects.h  pluginclipeffects_global.h
plugin-effects/: CMakeLists.txt  plugineffects.cpp  plugineffects.h
plugin-falloff/: CMakeLists.txt  beatfalloff.cpp  beatfalloff.h  mapped2dfalloff.cpp  mapped2dfalloff.h  pluginfalloff.cpp  pluginfalloff.h  randomfalloff.cpp  randomfalloff.h
plugin-nodes/: CMakeLists.txt  nodes-resources.qrc  plugin-nodes-global.h  pluginnodes.cpp  pluginnodes.h
plugin-output-nodes/: CMakeLists.txt  pluginoutputnodes.cpp  pluginoutputnodes.h  sacntransmitnode.cpp  sacntransmitnode.h
plugin-vamp/: CMakeLists.txt  beatdetectionprocess.cpp  beatdetectionprocess.h  pluginvamp.cpp  pluginvamp.h  vamp.cpp  vamp.h
plugin-visualizer/: CMakeLists.txt  arrowmodel.cpp  arrowmodel.h  camera.cpp  camera.h  entity.cpp  entity.h  fixturemodel.cpp  fixturemodel.h  freecamera.cpp  freecamera.h  modelfactory.cpp  modelfactory.h  modelloader.cpp  modelloader.h  openglviewport.cpp  openglviewport.h  orbitcamera.h  plugin-visualizer-global.h  pluginvisualizer.cpp  resources.qrc  scene.cpp  scene.h  sceneobjectmodel.cpp  sceneobjectmodel.h  trussmodel.cpp  trussmodel.h  visualizerpanel.cpp  visualizerpanel.h
plugin-visualizer-qmake/: CMakeLists.txt  camera.h  entity.cpp  fixturemodel.h  orbitcamera.cpp  pluginvisualizer.cpp  pluginvisualizer.h  resources.qrc  texture.cpp  texture.h  visualizerpanel.cpp  visualizerpanel.h
(+720 files in other folders)
